--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Hongye Fu's website "
 title_separator          : "-"
 name                     : &name "Hongye Fu"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Miracle-Master.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Miracle-Master/Miracle-Master.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
